# sama-agro-intelligence

./: .gitignore  .replit  03.py  1.py  12.py  2.py  3.py  app.py  collect_and_caption.py  collect_deficiencies.py  collect_images.py  enrich_deficiencies_dataset.py  extract_fertilization_data.py  extract_minnesota_fertilization.py  nutrient_deficiencies_dataset.csv  plan_fertilization.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
data/: crops.py  locations.py  messages.json  products.json
fertilization_outputs/: fertilization_raw.xlsx
modules/: analytics.py  marketplace.py  messages.py  profile.py
pages/: marketplace.py  profile.py  weather.py
utils/: auth.py  database.py  payments.py  recommendations.py  translations.py  weather.py
