[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "pillow>=11.2.1",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.46.0",
    "plotly>=6.1.2",
    "pandas>=2.3.0",
    "requests>=2.32.4",
]
